2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl:  Added support for tooltips on text widget tags
	                (useful for tkchat url links). Fixed menu tooltips.
	* tooltip.man:  Added documentation.
	* pkgIndex.tcl: Incremented version to 1.2

2006-08-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): better handle boundary case
	considering Tk's odd multi-monitor screen dimension handling.
	AS bug 48498.

2006-03-31  Andreas Kupries <andreask@activestate.com>

	* tipstack.tcl (::tipstack::clearsub): Superfluous argument to
	  call of 'clear' removed.

2005-11-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): focus back to previous item, not
	the widget we are over.

2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2005-08-12  Andreas Kupries <andreask@activestate.com>

	* tooltip.man: Added module/title descriptions to the manpage.

2005-08-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): prevent aqua help focus theft

2005-04-29  Andreas Kupries <andreask@activestate.com>

	* tooltip.man: Fixed syntax errors in the documentation.

2005-04-02 Aaron Faupell <afaupell@users.sourceforge.net>

	* initial import