@@ -1,3 +1,10 @@
+2007-05-18  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tooltip.man, pkgIndex.tcl: bumped version to 1.3
+	* tooltip.tcl (::tooltip::show): Use late-binding msgcat (lazy
+	translation) to support programs that allow on-the-fly l10n
+	changes.  Requires msgcat package (Tk uses this already). (poser)
+
 2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tooltip.tcl:  Added support for tooltips on text widget tags
